# Huginn

./: .gitignore  Docling.ipynb  Huginn.ipynb  Huginn.py  Huginn_DB.py  Instructions.md  README.md  Untitled.ipynb  extract  get_pdfs  get_pdfs.md  huginn_chat_utils.py  huginn_db_utils.py  huginn_utils.py  main.py  pyproject.toml  references.txt  run_docling
.ipynb_checkpoints/: Docling-checkpoint.ipynb
