[project]
name = "huginn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "docling>=2.60.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "logfire>=4.14.2",
    "pydantic-ai>=1.9.0",
]
