[project]
name = "huginn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "chromadb>=1.3.4",
    "docling>=2.60.1",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "logfire>=4.14.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic-ai>=1.9.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
]
